<resources>
    <string name="app_name">Android File Transfer</string>
    <string name="title_home">Home</string>
    <string name="title_qr_scanner">QR Code Scanner</string>
    <string name="title_nfc">NFC</string>
    <string name="title_contacts">Contacts</string>
    <string name="title_files">Files</string>

    <string name="nfc_send">NFC Send</string>
    <string name="nfc_receive">NFC Receive</string>

    <string name="permission_access_network_state_is_required">Please accept permission ACCESS_WIFI_STATE.</string>

    <string name="my_id">My Device ID: </string>
    <string name="my_ip">My IP Address: </string>
    <string name="title_activity_nfc_send">NFC Send</string>
    <string name="title_activity_nfc_receive">NFC Receive</string>
    <string name="title_activity_contacts_list">Contacts List</string>
    <string name="title_activity_files">Contacts Files</string>

    <string name="contact_offline">"The contact is offline."</string>

    <string name="file_deleted">"The file has been successfully deleted."</string>

    <string name="sort_id">Sort by ID</string>
    <string name="sort_ip">Sort by IP</string>
    <string name="sort_distance">Sort by Distance</string>
    <string name="sort_last_login">Sort by Last Login</string>

</resources>
