<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_qr_scanner"
        android:icon="@android:drawable/ic_menu_camera"
        android:title="@string/title_qr_scanner" />

    <item
        android:id="@+id/navigation_nfc"
        android:icon="@drawable/ic_nfc_black_24dp"
        android:title="@string/title_nfc" />

    <item
        android:id="@+id/navigation_contacts"
        android:icon="@drawable/ic_contacts_black_24dp"
        android:title="@string/title_contacts" />

    <item
        android:id="@+id/navigation_files"
        android:icon="@drawable/ic_folder_light_blue_24dp"
        android:title="@string/title_files" />

</menu>
